k8s-resources/networkpolicy/all-ingress-from-specific-pods.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: all-ingress-from-specific-pods
  namespace: default
spec:
  podSelector:
    matchLabels:
      db: redis
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
  egress: []
